# sync-downloaded-files

./: README.rst  pyproject.toml  tox.ini
sync_downloaded_files/: sync-downloaded-files.py  sync_downloaded_files.py
tests/: test_sync_downloaded_files.py
