[tool.poetry]
name = "sync-downloaded-files"
version = "0.1.0"
description = ""
authors = ["John L. Villalovos"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "*"
flake8 = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
